--- a/style.css
+++ b/style.css
@@ -1,16 +1,26 @@
-header, section {
-    padding: 0 15% 0 15%;
+.content-width {
+    max-width: 1140px;
+    padding-left: 50px;
+    padding-right: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+}
+#header-flex {
+    display: flex;
+    justify-content: space-between;
 }
 header a, main a {
     display: block;
 }
 header {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    position: absolute;
+    width: 100%;
 }
 #header-logo {
-    width: 20%;
+    width: 200px;
 }
 #header-logo img {
     width: 100%;
@@ -18,10 +28,12 @@ header {
 #header-menu {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 #header-menu li {
     text-align: center;
     margin-left: 20px;
+    line-height: 1.2;
 }
 .en-menu {
     font-size: 1.3rem;
@@ -30,12 +42,63 @@ header {
 .ja-menu {
     font-weight: 550;
 }
-#counseling {
+.counseling {
     color: #fff;
     background-color: #f79314;
-    font-size: 1.3rem;
     font-weight: bold;
     border-radius: 30px;
-    line-height: 40px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#header-btn {
     width: 150px;
+    height: 40px;
+}
+#header-btn a {
+    font-size: 1.2rem;
+}
+
+#fv {
+    padding-top: 198px;
+    padding-bottom: 28px;
+    background-image: url(img/fv.png);
+}
+#fv-message {
+    width: 350px;
+    margin-right: 15px;
+}
+#fv-logo {
+    width: 100%;
+}
+#fv-logo img {
+    width: 100%;
+}
+#fv-message p {
+    font-size: 2rem;
+    font-weight: bold;
+    line-height: 1.7;
+    margin-top: 30px;
+}
+#fv-message p span {
+    color: #f79314;
+    font-weight: bold;
+}
+#fv-btn {
+    margin-top: 30px;
+    height: 60px;
+}
+#fv-btn a {
+    font-size: 1.6rem;
+}
+#fv-message-wrap {
+    display: flex;
+    justify-content: left;
+}
+#caution {
+    padding-top: 132px;
+    max-width: 512px;
+    color: #888;
 }
