--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
     margin-right: auto;
     position: relative;
 }
+.flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 #header-flex {
     display: flex;
     justify-content: space-between;
@@ -24,11 +29,6 @@ header {
 }
 #header-logo img {
     width: 100%;
-}
-#header-menu {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
 }
 #header-menu li {
     text-align: center;
@@ -52,6 +52,10 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.counseling:hover {
+    opacity: .7;
+    transition: .5s;
 }
 #header-btn {
     width: 150px;
@@ -101,4 +105,87 @@ header {
     padding-top: 132px;
     max-width: 512px;
     color: #888;
+}
+
+#about {
+    background-color: #f79314;
+    padding-top: 45px;
+    padding-bottom: 80px;
+}
+#gakuwari {
+    margin-bottom: 50px;
+}
+#gakuwari img {
+    width: 100%;
+}
+#about-message {
+    width: 53%;
+}
+#about-message h2 {
+    font-size: 4rem;
+    font-weight: 700;
+    color: #fff;
+}
+#about-message h2 span {
+    font-size: 4.5rem;
+    font-weight: 700;
+}
+#about-message p {
+    color: #fff;
+    font-weight: 600;
+    font-size: 1.4rem;
+    margin-top: 15px;
+    line-height: 2.3;
+}
+#about-btn {
+    width: 320px;
+    text-align: center;
+}
+#about-btn a {
+    background-color: #fff;
+    color: #f79314;
+    display: flex;
+    flex-direction: column;
+}
+#about-btn-span1 {
+    font-weight: bold;
+    font-size: 1.7rem;
+    letter-spacing: 5px;
+    line-height: 2em;
+}
+#about-btn-span2 {
+    font-weight: bold;
+    font-size: 1.4rem;
+    line-height: 2em;
+}
+
+.main-section {
+    padding-top: 75px;
+    padding-bottom: 80px;
+}
+.section-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+.section-header h2 {
+    font-weight: bold;
+    font-size: 4rem;
+}
+.section-header p {
+    font-weight: bold;
+    font-size: 1.5rem;
+    margin-top: 10px;
+}
+.section-header::after {
+    content: '';
+    display: block;
+    border-bottom: 6px solid #f79314;
+    width: 50px;
+    margin-top: 20px;
+}
+#movie {
+    margin-top: 60px;
+    text-align: center;
 }
