--- a/style.css
+++ b/style.css
@@ -27,13 +27,25 @@ header {
 #header-logo {
     width: 200px;
 }
+#header-logo a {
+    transition-duration: .2s;
+}
+#header-logo a:hover {
+    opacity: .7;
+    transition-duration: .2s;
+}
 #header-logo img {
     width: 100%;
 }
 #header-menu li {
     text-align: center;
+    color: #222;
     margin-left: 20px;
     line-height: 1.2;
+}
+#header-menu li:hover {
+    color: #777;
+    transition-duration: .2s;
 }
 .en-menu {
     font-size: 1.3rem;
@@ -50,6 +62,7 @@ header {
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -139,25 +152,11 @@ header {
 }
 #about-btn {
     width: 320px;
-    text-align: center;
+    height: 60px;
 }
 #about-btn a {
     background-color: #fff;
     color: #f79314;
-    display: flex;
-    flex-direction: column;
-}
-#about-btn-span1 {
-    font-weight: bold;
-    font-size: 1.7rem;
-    letter-spacing: 5px;
-    line-height: 2em;
-    font-family: 'Lato', sans-serif;
-}
-#about-btn-span2 {
-    font-weight: bold;
-    font-size: 1.4rem;
-    line-height: 2em;
 }
 
 .main-section {
@@ -332,7 +331,7 @@ header {
     line-height: 1.7;
 }
 
-#select-course.main-section {
+.bg-gray.main-section {
     background-color: #f6f6f6;
     padding-top: 40px;
 }
@@ -436,11 +435,6 @@ header {
     margin-top: 60px;
     margin: 60px auto 0 auto;   
 }
-#course-price-btn {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
 .link-btn span:first-child {
     letter-spacing: 4px;
     line-height: 1.5;
@@ -507,20 +501,36 @@ header {
     padding-left: 20px;
     padding-right: 20px;
     width: calc(100% / 3);
-    height: 300px;
-    box-sizing: border-box;
+}
+.student-thumnail {
+    position: relative;
+    padding-top: 100%;
+    overflow: hidden;
+}
+.student:hover img {
+    transform: scale(1.1,1.1);
+    transition-duration: .2s;
+    transition-timing-function: ease;
+}
+.student:hover .student-text {
+    color: #f79314;
+    transition-duration: .2s;
 }
 .student img {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition-duration: .2s;
 }
 .student-info {
     position: absolute;
     bottom: 0;
+    right: 0;
+    left: 0;
     padding: 80px 20px 15px;
-    width: calc(100% - 40px);
-    height: 50%;
     background: linear-gradient(to top, rgba(0, 0, 0, 0.8) 55%, rgba(30, 30, 30, 0.7), rgba(50, 50, 50, 0));
 }
 .student-info p:first-child {
@@ -551,7 +561,54 @@ header {
     font-weight: bold;
     margin-top: 15px;
     line-height: 1.8;
+    transition-duration: .2s;
 }
-.main-link-btn.interview {
-    margin-top: 200px;
+
+.service-link {
+    width: calc(100% / 3);
+    padding-right: 20px;
+    padding-left: 20px;
+}
+.service-link:hover img {
+    transform: scale(1.05,1.05);
+    transition-duration: .2s;
+    transition-timing-function: ease;
+}
+.service-link:hover p {
+    color: #f79314;
+    transition-duration: 0.2s;
+    transition-timing-function: ease;
+}
+.flex-align-start {
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+}
+.service-link div {
+    border-radius: 10px;
+    padding: 0 20px;
+    height: 190px;
+    display: flex;
+    align-items: center;
+    background-color: #fff;
+}
+#service-link-border1 {
+    border: solid 2px #fc6803;
+}
+#service-link-border2 {
+    border: solid 2px #08af77;
+}
+#service-link-border3 {
+    border: solid 2px #000;
+}
+.service-link img {
+    width: 100%;
+    transition-duration: .2s;
+}
+.service-link p {
+    margin-top: 20px;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 1.8;
+    transition-duration: .2s;
 }
