--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ header {
 #header-logo a {
     transition-duration: .2s;
 }
-#header-logo a:hover {
+#header-logo a:hover,  #footer-logo:hover{
     opacity: .7;
     transition-duration: .2s;
 }
@@ -612,3 +612,98 @@ header {
     line-height: 1.8;
     transition-duration: .2s;
 }
+
+footer {
+    background-color: #f79314;
+    padding-top: 80px;
+    padding-bottom: 40px;
+}
+#page-top-btn {
+    position: absolute;
+    top: -105px;
+    right: 50px;
+    background-color: #fff;
+    border-radius: 50%;
+    box-shadow: 0 12px 30px -15px;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition-duration: .2s;
+}
+#page-top-btn:hover {
+    background-color: #f79314;
+}
+#page-top-btn:hover #page-top-arrow {
+    border-top: 3px solid #fff;
+    border-right: 3px solid #fff;
+}
+#page-top-arrow {
+    display: inline-block;
+    border-top: 3px solid #f79314;
+    border-right: 3px solid #f79314;
+    width: 10px;
+    height: 10px;
+    transform: rotate(-45deg);
+}
+#footer-logo {
+    width: 280px;
+    display: inline-block;
+}
+#footer-logo img {
+    width: 100%;
+}
+#company-info p {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #fff;
+    line-height: 1.5;
+}
+    #company-info p:first-child {
+        margin-top: 25px;
+    }
+    #company-info p:nth-child(2) {
+        margin-top: 10px;
+    }
+    #sns-logo {
+        margin-top: 35px;
+    }
+    #sns-logo a {
+        max-width: 60px;
+        display: inline-block;
+        transition-duration: .2s;
+    }
+    #sns-logo a:nth-child(2) {
+        margin-left: 20px;
+    }
+    #sns-logo a:hover {
+        opacity: .7;
+        transition-duration: .2s;
+    }
+    #sns-logo a img {
+        width: 100%;
+    }
+    #footer-menu li {
+        color: #fff;
+        font-size: 1.5rem;
+    }
+    #footer-menu :not(#footer-first-list) {
+        margin-top: 30px;
+    }
+    #footer-menu li span {
+        font-weight: bold;
+        margin-right: 1em;
+    }
+    #footer-character {
+        align-self: flex-end;
+    }
+    #footer-character img {
+        width: auto;
+        height: 70px;
+    }
+    #copy {
+        font-size: 1.2rem;
+        color: #fff;
+        margin-top: 60px;
+    }
